# shurl

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
configs/: default.toml
migrations/2021-03-13-075250_create_links/: up.sql
src/: main.rs  schema.rs
src/app/: auth.rs  config.rs  db.rs  mod.rs  models.rs  routes.rs  serializers.rs  shortener.rs  views.rs
src/app/models/: links.rs  mod.rs
src/app/views/: home.rs  links.rs  mod.rs
