[package]
name = "shurl"
version = "0.1.0"
authors = ["Sergey Demenok <sergey.demenok@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1"
